--- a/notebooks/Dataset_Generator_Small.ipynb
+++ b/notebooks/Dataset_Generator_Small.ipynb
@@ -194,7 +194,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Zipping '/content/dataset_subset' into 'chexpert.zip.zip'...\n",
+            "Zipping '/content/dataset_subset' into 'chexpert.zip'...\n",
             "Zip file created successfully.\n",
             "Google Colab environment detected. Initiating download...\n"
           ]
